update theme title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Merlot theme
-description: Merlot is a theme for GitHub Pages.
+title: Master of the Tech Universe
+description: Jahan nahi jaate Anadi, wahan jaate tech Khiladi !
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-merlot
